<resources>
    <string name="app_name">zakatGold</string>
    <string name="copyright">Copyright © 2023 Afiq and Afrina</string>
    <string name="about_text">This is Zakat Gold Payment\n Bayarlah zakat sebelum anda dizakatkan </string>
    <string name="link"> Click <a href = " https://github.com/Alyaani/zakatGold">This is link zakatGold application GitHub</a> </string>
    <string name="about_developer">Develop by:\n
    Muhammad Afiq Asyraf Bin Johari \n2021849922\n
    Nurul Afrinaalyaani Binti Mohamad Zaidi 2021494306\n
    RCS2515A</string>
</resources>
